@@ -70,7 +70,6 @@ opts.AddVariables(
     PathVariable('mandir', 'sets the man pages directory to a non-default location', "$datarootdir/man", PathVariable.PathAccept),
     PathVariable('docdir', 'sets the doc directory to a non-default location', "$datarootdir/doc/wesnoth", PathVariable.PathAccept),
     PathVariable('python_site_packages_dir', 'sets the directory where python modules are installed', "lib/python/site-packages/wesnoth", PathVariable.PathAccept),
-    BoolVariable('lowmem', 'Set to reduce memory usage by removing extra functionality', False),
     BoolVariable('notifications', 'Enable support for desktop notifications', True),
     BoolVariable('nls','enable compile/install of gettext message catalogs',True),
     BoolVariable('libintl', 'Use lib intl for translations, instead of boost locale', False),
@@ -512,9 +511,6 @@ for env in [test_env, client_env, env]:
     if "suncc" in env["TOOLS"]:
         env["OPT_FLAGS"] = "-g0"
         env["DEBUG_FLAGS"] = "-g"
-
-    if env['lowmem']:
-        env.Append(CPPDEFINES = "LOW_MEM")
 
     if env['internal_data']:
         env.Append(CPPDEFINES = "USE_INTERNAL_DATA")
