@@ -60,7 +60,6 @@ namespace {
 	const Uint32 titlebox_font_color = 0xFFFFFFFF;
 	const Uint32 storybox_font_color = 0xDDDDDDFF;
 
-#ifndef LOW_MEM
 	// Hard-coded path to a suitable (tileable) pic for the storytxt box border.
 	const std::string storybox_top_border_path = "dialogs/translucent54-border-top.png";
 	const std::string storybox_bottom_border_path = "dialogs/translucent54-border-bottom.png";
@@ -71,7 +70,6 @@ namespace {
 		blur = blur_surface(blur, 1, false);
 		video.blit_surface(0, y, blur);
 	}
-#endif
 }
 
 namespace storyscreen {
@@ -354,10 +352,6 @@ void part_ui::render_title_box()
 
 }
 
-#ifdef LOW_MEM
-void part_ui::render_story_box_borders(SDL_Rect& /*update_area*/)
-{}
-#else
 void part_ui::render_story_box_borders(SDL_Rect& update_area)
 {
 	const part::BLOCK_LOCATION tbl = p_.story_text_location();
@@ -404,7 +398,6 @@ void part_ui::render_story_box_borders(SDL_Rect& update_area)
 		}
 	}
 }
-#endif
 
 void part_ui::render_story_box()
 {
@@ -528,11 +521,9 @@ void part_ui::render_story_box()
 			back_button_.hide();
 			play_button_.hide();
 
-#ifndef LOW_MEM
 			if (dirty_ || first) {
 				blur_area(video_, fix_text_y, fix_text_h);
 			}
-#endif
 			if (dirty_ || first) {
 				sdl::draw_solid_tinted_rectangle(
 						0, fix_text_y, screen_area().w, fix_text_h,
@@ -542,7 +533,7 @@ void part_ui::render_story_box()
 				);
 			}
 
-			render_story_box_borders(update_area); // no-op if LOW_MEM is defined
+			render_story_box_borders(update_area);
 
 			next_button_.hide(false);
 			back_button_.hide(false);
