@@ -1,6 +1,8 @@
 Version 1.13.6+dev:
  * Language and i18n:
    * Updated translations: British English
+ * WML Engine:
+   * Removed LOW_MEM option when building.
 
 Version 1.13.6:
  * AI:
